ngrx 카운터 예제

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,3 +22,7 @@
 
   orderData price: {{ orderData.price }}, amount: {{ orderData.amount }}
 </ion-content>
+
+<ion-footer class="ion-padding">
+  <ion-button routerLink="/counter">Counter</ion-button>
+</ion-footer>
