feat: actions, reducer 추가

--- a/src/app/counter/counter.page.html
+++ b/src/app/counter/counter.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <div>Current Count: {{ count$ | async }}</div>
+  <div class="ion-padding">Current Count: {{ count$ | async }}</div>
   <ion-button (click)="increment()">increment</ion-button>
   <ion-button (click)="decrement()">decrement</ion-button>
   <ion-button (click)="reset()">reset</ion-button>
