--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,4 +25,5 @@
 
 <ion-footer class="ion-padding">
   <ion-button routerLink="/counter">Counter</ion-button>
+  <ion-button routerLink="/view">View</ion-button>
 </ion-footer>
