feat: 자동완성 예제

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,5 +25,6 @@
 
 <ion-footer class="ion-padding">
   <ion-button routerLink="/counter">Counter</ion-button>
+  <ion-button routerLink="/autocomplete">자동완성</ion-button>
   <ion-button routerLink="/view">View</ion-button>
 </ion-footer>
