--- a/src/app/autocomplete/autocomplete.page.html
+++ b/src/app/autocomplete/autocomplete.page.html
@@ -9,10 +9,10 @@
 
 <ion-content>
 	<div class="autocomplete">
-		<input id="search" type="input" placeholder="검색하고 싶은 사용자 아이디를 입력해주세요" />
-		<ul id="suggestLayer"></ul>
+		<input #search id="search" type="input" placeholder="검색하고 싶은 사용자 아이디를 입력해주세요" />
+		<ul #suggestLayer id="suggestLayer"></ul>
 		<!-- 로딩바 -->
-		<div id="loading">
+		<div #loading id="loading">
 			<ion-spinner></ion-spinner>
 		</div>
 	</div>
