feat: stream으로 변경

--- a/src/app/autocomplete/autocomplete.page.html
+++ b/src/app/autocomplete/autocomplete.page.html
@@ -10,8 +10,8 @@
 <ion-content>
 	<div class="autocomplete">
 		<ion-item>
-			<input #search id="search" type="input" placeholder="검색하고 싶은 사용자 아이디를 입력해주세요" />
-			<ion-button (click)="doSearch()">Serach</ion-button>
+			<input #search (input)="inputKeywordA$.next(search.value)" id="search" type="input" placeholder="검색하고 싶은 사용자 아이디를 입력해주세요" />
+			<ion-button (click)="searchButtonA$.next()">Serach</ion-button>
 		</ion-item>
 		<ul *ngIf="usersV$ | async" id="suggestLayer">
 			<li *ngFor="let user of usersV$ | async" class="user">
@@ -26,7 +26,3 @@
 		</div>
 	</div>
 </ion-content>
-
-<!-- <ng-template #empty>
-	<ul></ul>
-</ng-template> -->
