--- a/src/app/counter/counter.page.html
+++ b/src/app/counter/counter.page.html
@@ -12,4 +12,5 @@
   <ion-button (click)="increment()">increment</ion-button>
   <ion-button (click)="decrement()">decrement</ion-button>
   <ion-button (click)="reset()">reset</ion-button>
+  <ion-button (click)="test()">test</ion-button>
 </ion-content>
