feat: tailwind add

--- a/src/app/counter/counter.page.html
+++ b/src/app/counter/counter.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>counter</ion-title>
+    <ion-title class="text-3xl">counter</ion-title>
   </ion-toolbar>
 </ion-header>
 
